# rvemu-rs

./: Cargo.toml  log.out
src/: decode.rs  elfdef.rs  interp.rs  interp_utils.rs  lib.rs  machine.rs  main.rs  mmu.rs  reg.rs  rvemu.rs  sys_call.rs
test/: a.out  hello_world.c
