[package]
name = "rvmu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
proc-macro = true

[[bin]]
name = "rvemu-rs"
path = "src/main.rs"

[dependencies]
libc = "0.2.153"
page_size = "0.6.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

